tests/error/void_semi_in_struct.c
// fail "Cannot declare a struct member with type void."
union {
    void;
};
